MSPSDS-887 style: fix alignment of skip to contant banner

--- a/mspsds-web/app/assets/application/stylesheets/main.scss
+++ b/mspsds-web/app/assets/application/stylesheets/main.scss
@@ -28,6 +28,11 @@
   }
   // Shifts content of body to right by width of scrollbar
   padding-left: calc(100vw - 100%);
+
+  .skip-link-banner {
+    margin-left: -20px !important;
+    padding-left: 20px !important;
+  }
 }
 
 @media print {
